k8s/aws/api-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node-port-service
spec:
  type: NodePort
  selector:
    component: api
  ports:
    - port: 8080
      targetPort: 8080
