k8s/aws/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "employeeapp-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: employee-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "api-node-port-service"
              servicePort: 8080
